////////////////////////////////////////////////////////////////////////////////
/// @file         VoltVarCtrl.proto
///
/// @author       Yue Shi <yshi6@ncsu.edu>
///
/// @description  Declaration of all Volt Var Control message types
///
/// 
////////////////////////////////////////////////////////////////////////////////

package freedm.broker.vvc;

message VoltageDeltaMessage {
	required uint32 control_factor = 1;
	required float phase_measurement = 2;
	optional string reading_location = 3;
}

message LineReadingsMessage
{
	repeated float measurement = 1;
	required string capture_time = 2;
}

message GradientMessage
{
	repeated double gradient_value = 1;
	required string gradient_capture_time = 2;
}

message VoltVarMessage
{
	optional VoltageDeltaMessage voltage_delta_message = 1;
	optional LineReadingsMessage line_readings_message = 2;
	optional GradientMessage gradient_message = 3;
}

